<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:background="@color/semitransparent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/background_service_provider_card"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/_7sdp"
                app:font="@{`semibold`}"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/working_days"
                android:textSize="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"/>

            <LinearLayout
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/chBox_Sun"
                    android:text="@string/sunday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:padding="@dimen/_9sdp"
                    android:textSize="@dimen/_12sdp"
                    android:button="@drawable/selector_check_uncheck"
                    />

                <CheckBox
                    android:id="@+id/chBox_Mon"
                    android:text="@string/monday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:padding="@dimen/_9sdp"
                    android:textSize="@dimen/_12sdp"
                    android:button="@drawable/selector_check_uncheck"
                    />

                <CheckBox
                    android:id="@+id/chBox_Tue"
                    android:text="@string/tuesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:padding="@dimen/_9sdp"
                    android:textSize="@dimen/_12sdp"
                    android:button="@drawable/selector_check_uncheck"
                    />

                <CheckBox
                    android:id="@+id/chBox_Wed"
                    android:text="@string/wednesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:padding="@dimen/_9sdp"
                    android:textSize="@dimen/_12sdp"
                    android:button="@drawable/selector_check_uncheck"
                    />
                <CheckBox
                    android:id="@+id/chBox_Thur"
                    android:text="@string/thursday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:padding="@dimen/_9sdp"
                    android:textSize="@dimen/_12sdp"
                    android:button="@drawable/selector_check_uncheck"
                    />
                <CheckBox
                    android:id="@+id/chBox_Fri"
                    android:text="@string/friday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:padding="@dimen/_9sdp"
                    android:textSize="@dimen/_12sdp"
                    android:button="@drawable/selector_check_uncheck"
                    />
                <CheckBox
                    android:id="@+id/chBox_Sat"
                    android:text="@string/saturday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_7sdp"
                    android:padding="@dimen/_9sdp"
                    android:textSize="@dimen/_12sdp"
                    android:button="@drawable/selector_check_uncheck"
                    />

            </LinearLayout>

            <View
                android:background="@color/gray"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"/>
            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/days_cancel"
                    android:layout_weight="1"
                    android:padding="@dimen/_8sdp"
                    app:font="@{`semibold`}"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:text="@string/cancel"
                    android:textSize="@dimen/_15sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <View
                    android:background="@color/gray"
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"/>
                <TextView
                    android:id="@+id/days_done"
                    android:layout_weight="1"
                    android:padding="@dimen/_8sdp"
                    app:font="@{`semibold`}"
                    android:gravity="center"
                    android:textColor="@color/blue"
                    android:text="Done"
                    android:textSize="@dimen/_15sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </layout>